--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <style>
 body{
   margin:0;
-  font-family: cursive;
-  background: linear-gradient(180deg,#050b1f,#0c1430);
-  color:white;
+  font-family:cursive;
+  background:linear-gradient(180deg,#050b1f,#0c1430);
+  color:#fff;
 }
 .container{
   max-width:420px;
@@ -19,7 +19,6 @@ body{
 }
 h1{
   text-align:center;
-  margin-bottom:20px;
 }
 input,select,button{
   width:100%;
@@ -40,8 +39,8 @@ button{
 }
 .qr-box img{
   width:260px;
-  border-radius:12px;
   display:none;
+  border-radius:12px;
 }
 .note{
   font-size:13px;
@@ -49,15 +48,12 @@ button{
   margin-top:10px;
   color:#f1c40f;
 }
-#processingBox{
+#processingBox,#successBox{
   display:none;
   text-align:center;
   margin-top:12px;
 }
 #successBox{
-  display:none;
-  text-align:center;
-  margin-top:12px;
   color:#2ecc71;
 }
 .social-icons{
@@ -77,41 +73,42 @@ button{
 
 <h1>Everyday Store</h1>
 
-<input type="text" id="playerID" placeholder="Player ID" required>
-<input type="text" id="serverID" placeholder="Server ID" required>
-<input type="text" id="mobile" placeholder="Mobile Number" required>
+<input type="text" id="playerID" placeholder="Player ID">
+<input type="text" id="serverID" placeholder="Server ID">
+<input type="text" id="mobile" placeholder="Mobile Number">
 
-<select id="pack" onchange="updateQR()" required>
-  <option value="">Select Pack</option>
+<select id="pack" onchange="updateQR()">
+<option value="">Select Pack</option>
 
-  <!-- SMALL -->
-  <option value="qr/qr-3.png">3 Diamonds – ₹8</option>
-  <option value="qr/qr-5.png">5 Diamonds – ₹12</option>
-  <option value="qr/qr-11.png">11 Diamonds – ₹23</option>
-  <option value="qr/qr-22.png">22 Diamonds – ₹35</option>
+<!-- SMALL -->
+<option value="qr/qr-3.png">3 Diamonds – ₹8</option>
+<option value="qr/qr-5.png">5 Diamonds – ₹12</option>
+<option value="qr/qr-11.png">11 Diamonds – ₹23</option>
+<option value="qr/qr-22.png">22 Diamonds – ₹35</option>
 
-  <!-- MEDIUM -->
-  <option value="qr/qr-55.png">55 Diamonds – ₹81</option>
-  <option value="qr/qr-86.png">86 Diamonds – ₹118</option>
-  <option value="qr/qr-112.png">112 Diamonds – ₹155</option>
-  <option value="qr/qr-172.png">172 Diamonds – ₹227</option>
-  <option value="qr/qr-257.png">257 Diamonds – ₹319</option>
+<!-- MEDIUM -->
+<option value="qr/qr-55.png">55 Diamonds – ₹81</option>
+<option value="qr/qr-86.png">86 Diamonds – ₹118</option>
+<option value="qr/qr-112.png">112 Diamonds – ₹155</option>
+<option value="qr/qr-172.png">172 Diamonds – ₹227</option>
+<option value="qr/qr-257.png">257 Diamonds – ₹319</option>
 
-  <!-- LARGE -->
-  <option value="qr/qr-514.png">514 Diamonds – ₹637</option>
-  <option value="qr/qr-706.png">706 Diamonds – ₹855</option>
-  <option value="qr/qr-1050.png">1050 Diamonds – ₹1275</option>
-  <option value="qr/qr-1135.png">1135 Diamonds – ₹1385</option>
-  <option value="qr/qr-2195.png">2195 Diamonds – ₹2560</option>
-  <option value="qr/qr-3688.png">3688 Diamonds – ₹4475</option>
-  <option value="qr/qr-5532.png">5532 Diamonds – ₹6450</option>
-  <option value="qr/qr-9288.png">9288 Diamonds – ₹10950</option>
+<!-- LARGE -->
+<option value="qr/qr-514.png">514 Diamonds – ₹637</option>
+<option value="qr/qr-706.png">706 Diamonds – ₹855</option>
+<option value="qr/qr-1050.png">1050 Diamonds – ₹1275</option>
+<option value="qr/qr-1135.png">1135 Diamonds – ₹1385</option>
+<option value="qr/qr-2195.png">2195 Diamonds – ₹2560</option>
+<option value="qr/qr-3688.png">3688 Diamonds – ₹4475</option>
+<option value="qr/qr-5532.png">5532 Diamonds – ₹6450</option>
+<option value="qr/qr-9288.png">9288 Diamonds – ₹10950</option>
 
-  <!-- WEEKLY -->
-  <option value="qr/qr-weekly-1.png">1 Weekly Pass – ₹133</option>
-  <option value="qr/qr-weekly-172.png">Weekly Pass + 172 Diamonds – ₹360</option>
-  <option value="qr/qr-weekly-2.png">2 Weekly Passes – ₹366</option>
+<!-- WEEKLY -->
+<option value="qr/qr-weekly-1.png">1 Weekly Pass – ₹133</option>
+<option value="qr/qr-weekly-172.png">Weekly + 172 Diamonds – ₹360</option>
+<option value="qr/qr-weekly-2.png">2 Weekly Passes – ₹366</option>
 </select>
+
 <div class="qr-box">
   <img id="qrImage" alt="QR Code">
 </div>
@@ -120,17 +117,14 @@ button{
 
 <button onclick="sendOrder()">Order After Payment</button>
 
-<div id="processingBox" style="display:none;">
-  ⏳ Processing your order, please wait...
+<div id="processingBox">⏳ Processing your order, please wait...</div>
+
+<div id="successBox">
+✅ Order placed successfully<br>
+<b>Order ID:</b> <span id="orderIdText"></span><br>
+Please tap <b>SEND</b> in Gmail to confirm.
 </div>
 
-<div id="successBox" style="display:none;">
-  ✅ Order placed successfully<br>
-  <b>Order ID:</b> <span id="orderIdText"></span><br>
-  Please tap <b>SEND</b> in Gmail to confirm.
-</div>
-  
-  <!-- SOCIAL ICONS -->
 <div class="social-icons">
   <a href="https://www.instagram.com/everyday_store_official" target="_blank">
     <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png">
@@ -143,6 +137,8 @@ button{
   </a>
 </div>
 
+</div>
+
 <script>
 function updateQR(){
   const pack = document.getElementById("pack");
@@ -150,8 +146,8 @@ function updateQR(){
 
   if(pack.value){
     qr.src = pack.value;
-    qr.style.display = "inline-block";
-  } else {
+    qr.style.display = "block";
+  }else{
     qr.style.display = "none";
   }
 }
@@ -182,14 +178,14 @@ function sendOrder(){
       "Pack: " + pack.options[pack.selectedIndex].text
     );
 
-  setTimeout(() => {
+  setTimeout(()=>{
     document.getElementById("processingBox").style.display = "none";
     document.getElementById("successBox").style.display = "block";
-  }, 1200);
+  },1200);
 
-  setTimeout(() => {
+  setTimeout(()=>{
     window.location.href = mailLink;
-  }, 2000);
+  },2000);
 }
 </script>
 
