--- a/index.html
+++ b/index.html
@@ -116,12 +116,31 @@ button{
 
 <button onclick="sendOrder()">Order After Payment</button>
 
-<a href="https://wa.me/917679393645?text=Join%20our%20Everyday%20Store%20WhatsApp%20Group"
-   target="_blank">
-  <button style="background:#25D366; color:white; margin-top:10px; font-weight:bold;">
-    Join WhatsApp Store
+<a href="https://chat.whatsapp.com/IHdIzkLFzgBJkjxjiUVBxD"
+   target="_blank"
+   rel="noopener noreferrer">
+  <button style="
+    background:#25D366;
+    color:#ffffff;
+    font-weight:600;
+    font-size:15px;
+    margin-top:12px;
+    width:100%;
+    padding:12px;
+    border-radius:10px;
+  ">
+    Get Store Updates
   </button>
 </a>
+
+<p style="
+  text-align:center;
+  font-size:12px;
+  margin-top:6px;
+  color:#bfbfbf;
+">
+  Get updates, offers, and announcements on WhatsApp
+</p>
 
 <div id="processingBox">⏳ Processing your order, please wait...</div>
 
