--- a/admin.html
+++ b/admin.html
@@ -66,7 +66,7 @@
 </div>
 
 <script>
-  const ADMIN_PASSWORD = "1234"; // 🔐 change this
+  const ADMIN_PASSWORD = "151616"; // 🔐 change this
 
   function login(){
     const p = document.getElementById("pass").value;
@@ -90,15 +90,15 @@
   }
 
   function setStore(open){
-    localStorage.setItem("storeOpen", open ? "yes" : "no");
-    updateStatus();
-    alert(open ? "Store OPENED" : "Store CLOSED");
-  }
+  localStorage.setItem("storeStatus", open ? "open" : "closed");
+  updateStatus();
+  alert(open ? "Store OPENED" : "Store CLOSED");
+}
 
   function updateStatus(){
-    const s = localStorage.getItem("storeOpen");
-    document.getElementById("statusText").innerText =
-      s === "yes" ? "🟢 Store is OPEN" : "🔴 Store is CLOSED";
+    const s = localStorage.getItem("storeStatus");
+document.getElementById("statusText").innerText =
+  s === "open" ? "🟢 Store is OPEN" : "🔴 Store is CLOSED";
   }
 
   if(localStorage.getItem("admin")==="yes"){
