--- a/index.html
+++ b/index.html
@@ -175,9 +175,14 @@ font-weight:600;
     <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png">
   </a>
 </div>
-<script>
-document.addEventListener("DOMContentLoaded", () => {
-  const status = localStorage.getItem("storeStatus");
+<script type="module">
+import { doc, onSnapshot } from
+"https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+
+const storeRef = doc(window.db, "settings", "store");
+
+onSnapshot(storeRef, (snap) => {
+  const status = snap.data().status;
 
   const msg = document.getElementById("storeStatusMsg");
   const btn = document.getElementById("orderBtn");
