--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@ button{
 <option value="">Select Pack</option>
 
 <!-- SMALL -->
+  <option value="https://api.qrserver.com/v1/create-qr-code/?size=300x300&data=TEST">
+TEST QR (click me)
+</option>
 <option value="qr/qr-3.png">3 Diamonds – ₹8</option>
 <option value="qr/qr-5.png">5 Diamonds – ₹12</option>
 <option value="qr/qr-11.png">11 Diamonds – ₹23</option>
