--- a/index.html
+++ b/index.html
@@ -116,7 +116,16 @@ button{
 <div class="note">⚠️ QR appears automatically after selecting a pack</div>
 
 <button onclick="sendOrder()">Order After Payment</button>
-
+<a href="https://wa.me/917679393645?text=Join%20our%20Everyday%20Store%20WhatsApp%20Group" target="_blank">
+  <button style="
+    background:#25D366;
+    color:white;
+    margin-top:10px;
+    font-weight:bold;
+  ">
+    Join WhatsApp Store
+  </button>
+</a>
 <div id="processingBox">⏳ Processing your order, please wait...</div>
 
 <div id="successBox">
