--- a/index.html
+++ b/index.html
@@ -110,28 +110,30 @@ button{
 </select>
 
 <div class="qr-box">
-  <img id="qrImage" alt="QR Code">
+  <img id="qrImage" alt="QR Code" style="display:none;">
 </div>
 
 <div class="note">⚠️ QR appears automatically after selecting a pack</div>
 
 <button onclick="sendOrder()">Order After Payment</button>
-<a href="https://wa.me/917679393645?text=Join%20our%20Everyday%20Store%20WhatsApp%20Group" target="_blank">
-  <button style="
-    background:#25D366;
-    color:white;
-    margin-top:10px;
-    font-weight:bold;
-  ">
+
+<a href="https://chat.whatsapp.com/IHdIzkLFzgBJkjxjiUVBxD" target="_blank">
+  <button style="background:#25D366; color:white; margin-top:10px; font-weight:bold;">
     Join WhatsApp Store
   </button>
 </a>
+   target="_blank">
+  <button style="background:#25D366; color:white; margin-top:10px; font-weight:bold;">
+    Join WhatsApp Store
+  </button>
+</a>
+
 <div id="processingBox">⏳ Processing your order, please wait...</div>
 
 <div id="successBox">
-✅ Order placed successfully<br>
-<b>Order ID:</b> <span id="orderIdText"></span><br>
-Please tap <b>SEND</b> in Gmail to confirm.
+  ✅ Order placed successfully<br>
+  <b>Order ID:</b> <span id="orderIdText"></span><br>
+  Please tap <b>SEND</b> in Gmail to confirm.
 </div>
 
 <div class="social-icons">
@@ -149,25 +151,25 @@ Please tap <b>SEND</b> in Gmail to confirm.
 </div>
 
 <script>
-function updateQR(){
+function updateQR() {
   const pack = document.getElementById("pack");
   const qr = document.getElementById("qrImage");
 
-  if(pack.value){
+  if (pack.value) {
     qr.src = pack.value;
     qr.style.display = "block";
-  }else{
+  } else {
     qr.style.display = "none";
   }
 }
 
-function sendOrder(){
+function sendOrder() {
   const playerID = document.getElementById("playerID").value.trim();
   const serverID = document.getElementById("serverID").value.trim();
   const mobile = document.getElementById("mobile").value.trim();
   const pack = document.getElementById("pack");
 
-  if(!playerID || !serverID || !mobile || !pack.value){
+  if (!playerID || !serverID || !mobile || !pack.value) {
     alert("Please fill all details and select a pack");
     return;
   }
@@ -179,7 +181,8 @@ function sendOrder(){
   const mailLink =
     "mailto:storeeveryday26@gmail.com" +
     "?subject=New MLBB Order" +
-    "&body=" + encodeURIComponent(
+    "&body=" +
+    encodeURIComponent(
       "Order ID: " + orderId + "\n" +
       "Player ID: " + playerID + "\n" +
       "Server ID: " + serverID + "\n" +
@@ -187,14 +190,14 @@ function sendOrder(){
       "Pack: " + pack.options[pack.selectedIndex].text
     );
 
-  setTimeout(()=>{
+  setTimeout(() => {
     document.getElementById("processingBox").style.display = "none";
     document.getElementById("successBox").style.display = "block";
-  },1200);
+  }, 1200);
 
-  setTimeout(()=>{
-    window.location.href = mailLink;
-  },2000);
+  setTimeout(() => {
+    window.open(mailLink, "_blank");
+  }, 2000);
 }
 </script>
 
