--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ button{
 
 <button onclick="sendOrder()">Order After Payment</button>
 
-<a href="https://chat.whatsapp.com/IHdIzkLFzgBJkjxjiUVBxD" target="_blank">
+<a href="https://chat.whatsapp.com/XXXX" target="_blank">
   <button style="background:#25D366; color:white; margin-top:10px; font-weight:bold;">
     Join WhatsApp Store
   </button>
