--- a/admin.html
+++ b/admin.html
@@ -65,45 +65,51 @@
   <button class="logout" onclick="logout()">Logout</button>
 </div>
 
-<script>
-  const ADMIN_PASSWORD = "151616"; // 🔐 change this
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+import { getFirestore, doc, setDoc, onSnapshot } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
-  function login(){
-    const p = document.getElementById("pass").value;
-    if(p === ADMIN_PASSWORD){
-      localStorage.setItem("admin","yes");
-      showAdmin();
-    } else {
-      alert("Wrong password");
-    }
+const firebaseConfig = {
+  apiKey: "AIzaSyB7ZS8S879-gQFikWUyq4y0rDja7DzboK",
+  authDomain: "everyday-store-6debb.firebaseapp.com",
+  projectId: "everyday-store-6debb",
+  storageBucket: "everyday-store-6debb.appspot.com",
+  messagingSenderId: "488459400808",
+  appId: "1:488459400808:web:3f0f4b3eee464bed12ddd"
+};
+
+const app = initializeApp(firebaseConfig);
+const db = getFirestore(app);
+const storeRef = doc(db, "settings", "store");
+
+const ADMIN_PASSWORD = "151616";
+
+window.login = function () {
+  const p = document.getElementById("pass").value;
+  if (p === ADMIN_PASSWORD) {
+    document.getElementById("loginBox").style.display = "none";
+    document.getElementById("adminBox").style.display = "block";
+  } else {
+    alert("Wrong password");
   }
+};
 
-  function showAdmin(){
-    document.getElementById("loginBox").style.display="none";
-    document.getElementById("adminBox").style.display="block";
-    updateStatus();
-  }
+window.logout = function () {
+  location.reload();
+};
 
-  function logout(){
-    localStorage.removeItem("admin");
-    location.reload();
-  }
+window.setStore = async function (open) {
+  await setDoc(storeRef, {
+    status: open ? "open" : "closed"
+  });
+};
 
-  function setStore(open){
-  localStorage.setItem("storeStatus", open ? "open" : "closed");
-  updateStatus();
-  alert(open ? "Store OPENED" : "Store CLOSED");
-}
-
-  function updateStatus(){
-    const s = localStorage.getItem("storeStatus");
-document.getElementById("statusText").innerText =
-  s === "open" ? "🟢 Store is OPEN" : "🔴 Store is CLOSED";
-  }
-
-  if(localStorage.getItem("admin")==="yes"){
-    showAdmin();
-  }
+onSnapshot(storeRef, (snap) => {
+  if (!snap.exists()) return;
+  const s = snap.data().status;
+  document.getElementById("statusText").innerText =
+    s === "open" ? "🟢 Store is OPEN" : "🔴 Store is CLOSED";
+});
 </script>
 
 </body>
