--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ const firebaseConfig = {
 
 const app = initializeApp(firebaseConfig);
 const db = getFirestore(app);
-const storeRef = doc(db, "settings", "store");
+const storeRef = doc(db, "store", "store");
 
 onSnapshot(storeRef, (snap) => {
   if (!snap.exists()) return;
