--- a/index.html
+++ b/index.html
@@ -65,12 +65,47 @@ button{
 .social-icons img{
   width:36px;
 }
+  .container {
+  background: rgba(0,0,0,0.35);
+  border-radius: 20px;
+  box-shadow: 0 0 25px rgba(0,0,0,0.6);
+}
+
+input, select {
+  background: #111;
+  color: #fff;
+}
+  /* ===== TOP BANNER SLIDER ===== */
+.slider {
+  width: 100%;
+  height: 160px;
+  border-radius: 16px;
+  overflow: hidden;
+  margin-bottom: 15px;
+  position: relative;
+}
+
+.slider img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: none;
+}
+
+.slider img.active {
+  display: block;
+}
 </style>
 </head>
 
 <body>
 <div class="container">
-
+<!-- TOP BANNER SLIDER -->
+<div class="slider">
+  <img src="https://i.imgur.com/6Z8FZQJ.jpg" class="active">
+  <img src="https://i.imgur.com/8Km9tLL.jpg">
+  <img src="https://i.imgur.com/Qw7YFzv.jpg">
+</div>
 <h1>Everyday Store</h1>
 
 <input type="text" id="playerID" placeholder="Player ID">
@@ -233,5 +268,18 @@ const storeRef = doc(db, "store", "store");
   }
 
 </script>
+  <!-- AUTO SLIDER SCRIPT -->
+  <script>
+    const slides = document.querySelectorAll(".slider img");
+    let currentSlide = 0;
+
+    setInterval(() => {
+      slides[currentSlide].classList.remove("active");
+      currentSlide = (currentSlide + 1) % slides.length;
+      slides[currentSlide].classList.add("active");
+    }, 3000);
+  </script>
+
 </body>
 </html>
+
