--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@ input, select {
 <div class="container">
 <!-- TOP BANNER SLIDER -->
 <div class="slider">
-  <img src="https://i.imgur.com/6Z8FZQJ.jpg" class="active">
-  <img src="https://i.imgur.com/8Km9tLL.jpg">
-  <img src="https://i.imgur.com/Qw7YFzv.jpg">
+  <img src="images/banner1.jpg" class="active">
+  <img src="images/banner2.jpg">
+  <img src="images/banner3.jpg">
 </div>
 <h1>Everyday Store</h1>
 
